# Hestia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WRITEUP.md  deploy.sh  pyproject.toml  requirements.txt
dashboard/: index.html
demo/: adk_attack_demo.py  attack_demo.py  hestia_demo.py  mcp_attack_demo.py  with_without_sentinel.py
src/hestia/: approvals.py  ask.py  bills.py  care.py  concierge.py  concierge_tools.py  documents.py  extract.py  inbox.py  reminders.py  runtime.py
src/hestia/web/: console.html  server.py
src/sentinel/: mock_tools.py  policy.py  risk.py  session.py  trace.py  verdict.py
src/sentinel/agents/: assistant.py  investigation_skills.py  investigator.py  reasoner.py  skills.py
src/sentinel/detectors/: base.py  heuristic.py
src/sentinel/gateway/: mcp_server.py
tests/: test_documents.py  test_extract.py  test_hestia.py  test_inbox.py  test_investigation.py  test_policy.py  test_web.py
