[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mcp-gateway"
version = "0.1.0"
description = "An MCP security gateway that screens AI-agent tool calls for prompt injection before they run."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "mcp>=1.0",
]

# Optional extras. The security core + MCP gateway need only the base deps above.
# `pip install -e ".[adk]"` adds the agent framework; `[dev]` adds the test runner.
[project.optional-dependencies]
adk = ["google-adk>=2.3"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9", "pypdf>=4.0", "python-dotenv>=1.0"]
dev = ["pytest>=8"]

# src layout: the importable package `sentinel` lives under src/.
[tool.setuptools.package-data]
"hestia.web" = ["*.html"]

[tool.setuptools.packages.find]
where = ["src"]
